[tool.poetry]
name = "rero-invenio-base"
version = "0.3.0"
description = "Generic backend libraries for RERO Invenio instances."
readme = "README.rst"
authors = ["RERO <software@rero.ch>"]
license = "GNU Affero General Public License v3.0"

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
PyYAML = "<=7.0"
jsonpatch = "<=2.0"
Mako = ">=1.2.2"
dparse = ">=0.5.2"
invenio-search = {version = "<3.0.0", extras = ["elasticsearch7"]}
invenio-db = {version = ">=1.1.0,<1.2.0", extras = ["postgresql"]}
invenio-indexer = "<3.0.0"
invenio-records-rest = "<2.3.0"
pydocstyle = ">=6.1.1"
docker-services-cli = "^0.6.1"
sqlalchemy = ">=1.3.0,<1.5.0"

[tool.poetry.dev-dependencies]
safety = ">=1.8"
ipython = "*"
autoflake = ">=1.3.1"
Sphinx = ">=4.5.0"
pytest-invenio = ">=1.4.11, <3.0.0"
docker-services-cli = "<=1.0.0"

[tool.poetry.scripts]
check_license = "rero_invenio_base.cli.utils:check_license"
check_json = "rero_invenio_base.cli.utils:check_json"
rero = "rero_invenio_base.cli:rero"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."flask.commands"]
rero = "rero_invenio_base.cli:rero"

[tool.poetry.plugins."invenio_base.apps"]
rero-invenio-base-export = "rero_invenio_base.modules.export.ext:ReroInvenioBaseExportApp"

[tool.poetry.plugins."invenio_base.api_blueprints"]
rero_ils_exports = "rero_invenio_base.modules.export.views:create_blueprint_from_app"

[tool.poetry.plugins."invenio_celery.tasks"]
rero = "rero_invenio_base.modules.tasks"
