[project]
name = "rero-invenio-base"
version = "0.3.1"
description = "Generic backend libraries for RERO Invenio instances."
readme = "README.rst"
authors = [{name = "RERO",email = "<software@rero.ch>"}]
license = "GNU Affero General Public License v3.0"
requires-python = ">=3.9, <3.13"

dependencies = [
    "PyYAML (<=7.0)",
    "jsonpatch (<=2.0)",
    "Mako (>=1.2.2)",
    "dparse (>=0.5.2)",
    "invenio-search [elasticsearch7] (>=2.1.0)",
    "invenio-db [postgresql] (>=1.1.0)",
    "invenio-indexer (>=2.2.0)",
    "invenio-records-rest (>=2.2.0)",
    "sqlalchemy (>=1.3.0)"
]

[tool.poetry.group.dev.dependencies]
pytest-invenio = ">=2.1.6"
pydocstyle = ">=6.1.1"
pytest-black = ">=0.3.2"
pytest-black-ng = ">=0.4.0"
Sphinx = ">=4.5.0"
pip-audit = ">=2.8.0,<3.0.0"
ipython = "*"
autoflake = ">=1.3.1"
docker-services-cli = "<=1.0.0"
appnope = { version = "*", optional = true }

[tool.project.entry-points]
check_license = "rero_invenio_base.cli.utils:check_license"
check_json = "rero_invenio_base.cli.utils:check_json"
rero = "rero_invenio_base.cli:rero"

[tool.isort]
profile = "black"

[tool.pytest]
addopts = "--color=yes --black --isort --pydocstyle --doctest-glob=\"*.rst\" --doctest-modules --cov=rero_invenio_base --cov-report=term-missing --ignore=docs/conf.py"
testpaths = "docs tests rero_invenio_base"
# custom markers
# not displaying all the PendingDeprecationWarnings from invenio
filterwarnings = "ignore::PendingDeprecationWarning"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.entry-points."flask.commands"]
rero = "rero_invenio_base.cli:rero"

[project.entry-points."invenio_base.apps"]
rero-invenio-base-export = "rero_invenio_base.modules.export.ext:ReroInvenioBaseExportApp"

[project.entry-points."invenio_base.api_blueprints"]
rero_ils_exports = "rero_invenio_base.modules.export.views:create_blueprint_from_app"

[project.entry-points."invenio_celery.tasks"]
rero = "rero_invenio_base.modules.tasks"
